--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -16,7 +16,7 @@
 
 .infoCardCallActionContainer :global(.vtex-button):hover {
     color: gray;
-    background-color: blue;
+    background-color: white;
     border: transparent;
 }
 
@@ -30,10 +30,6 @@
     padding: 0;
 }
 
-.infoCardContainer :hover{
-    background-color: white;
-}
-
 .infoCardContainer--metal{
-    background-color: #E1E1E1;
+    background-color: #e1e1e1;
 }
